--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.23.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
     "@sentry/nextjs": "^9.35.0",
     "@t3-oss/env-nextjs": "^0.12.0",
