--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
     "posthog-js": "^1.256.2",
+    "posthog-node": "^5.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.6",
