--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@sentry/nextjs": "^9.35.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@uploadthing/react": "^7.3.2",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.35.1",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
